[project]
name = "kis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",          # HTTP (sync/async)
    "websockets",     # WebSocket
    "pycryptodome",   # AES λ³µνΈν™”
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
