[project]
name = "kis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",          # HTTP (sync/async)
    "websockets",     # WebSocket
    "pycryptodome",   # AES 복호화
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-httpx", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["E701"]  # 한 줄 early return 허용

[tool.pytest.ini_options]
asyncio_mode = "auto"
